force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <!--Hema 10/08 - YODA Marketing Global Admin - not appropriate for object - I-424065-HM-Redo
    Hema 10/08 - YODA Marketing Global Admin - not appropriate for object - I-424065-HM-Redo-->
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>