force-app/main/default/objects/Contact/fields/Address_Local__c.field-meta.xml
<CustomField>
    <fullName>Address_Local__c</fullName>
    <label>Address Local</label>
    <type>TextArea</type>
</CustomField>