force-app/main/default/objects/Contact/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <description>System detected</description>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>