force-app/main/default/objects/Contact/fields/Calibration_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Subscription__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the calibration subscription.</description>
    <label>Calibration Subscription</label>
    <type>Checkbox</type>
</CustomField>