force-app/main/default/objects/Contact/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>This field is used to store the company name of the self register contact</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>