force-app/main/default/objects/Contact/fields/Contract_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Contract_Subscription__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the contract subscription.</description>
    <label>Contract Subscription</label>
    <type>Checkbox</type>
</CustomField>