force-app/main/default/objects/Contact/fields/Double_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_In_Date__c</fullName>
    <label>Double Opt-In Date</label>
    <type>Date</type>
</CustomField>