force-app/main/default/objects/Contact/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>Unique event identifier</description>
    <label>Event Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 