force-app/main/default/objects/Contact/fields/External_Platform_Event_User_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Platform_Event_User_Id__c</fullName>
    <description>Hidden registration field typically used to store external platform IDs</description>
    <label>External Platform Event User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>