force-app/main/default/objects/Contact/fields/Gigya_UID__c.field-meta.xml
<CustomField>
    <fullName>Gigya_UID__c</fullName>
    <description>GIGYA Unique ID</description>
    <label>Gigya_UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>