force-app/main/default/objects/Contact/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <description>Retrieves the code associated with the industry.</description>
    <formula>Industry__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Code</label>
    <type>Text</type>
</CustomField>