force-app/main/default/objects/Contact/fields/Newsletter1_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Newsletter1_Subscription__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the newsletter1 subscription.</description>
    <label>Newsletter1 Subscription</label>
    <type>Checkbox</type>
</CustomField>