force-app/main/default/objects/Contact/fields/Newsletter2_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Newsletter2_Subscription__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the newsletter2 subscription.</description>
    <label>Newsletter2 Subscription</label>
    <type>Checkbox</type>
</CustomField>