force-app/main/default/objects/Contact/fields/Newsletter3_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Newsletter3_Subscription__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the newsletter3 subscription.</description>
    <label>Newsletter3 Subscription</label>
    <type>Checkbox</type>
</CustomField>