force-app/main/default/objects/Contact/fields/On24_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>On24_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registrant provisioned text</description>
    <label>On24 Email Opt-In</label>
    <type>Checkbox</type>
</CustomField>