force-app/main/default/objects/Contact/fields/Orphan_Contact__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Contact__c</fullName>
    <formula>ISBLANK( Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orphan Contact</label>
    <type>Checkbox</type>
</CustomField>