force-app/main/default/objects/Contact/fields/Portal_User_Roles__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Roles__c</fullName>
    <description>This field is used to store the Portal User Roles</description>
    <label>Portal User Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
                <label>Customer Admin</label>
            </value>
            <value>
                <fullName>CU</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Super Admin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>