force-app/main/default/objects/Contact/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <label>Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial Automation Updates</fullName>
            </value>
            <value>
                <fullName>Test &amp; Measurement Updates</fullName>
            </value>
            <value>
                <fullName>Life Science Updates</fullName>
            </value>
            <value>
                <fullName>Calibration Subscription</fullName>
                <isActive>false</isActive>
                <label>Calibration Subscription</label>
            </value>
            <value>
                <fullName>Contract Subscription</fullName>
                <isActive>false</isActive>
                <label>Contract Subscription</label>
            </value>
            <value>
                <fullName>May we offer you more information on our products &amp; services</fullName>
                <isActive>false</isActive>
                <label>May we offer you more information on our products &amp; services</label>
            </value>
            <value>
                <fullName>Newsletter 1 Subscription</fullName>
                <isActive>false</isActive>
                <label>Newsletter 1 Subscription</label>
            </value>
            <value>
                <fullName>Newsletter 2 Subscription</fullName>
                <isActive>false</isActive>
                <label>Newsletter 2 Subscription</label>
            </value>
            <value>
                <fullName>Newsletter 3 Subscription</fullName>
                <isActive>false</isActive>
                <label>Newsletter 3 Subscription</label>
            </value>
            <value>
                <fullName>Profile Update Subscription</fullName>
                <isActive>false</isActive>
                <label>Profile Update Subscription</label>
            </value>
            <value>
                <fullName>Service Request Subscription</fullName>
                <isActive>false</isActive>
                <label>Service Request Subscription</label>
            </value>
            <value>
                <fullName>Software Request Subscription</fullName>
                <isActive>false</isActive>
                <label>Software Request Subscription</label>
            </value>
            <value>
                <fullName>What prompted your interest for this query?</fullName>
                <isActive>false</isActive>
                <label>What prompted your interest for this query?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>