force-app/main/default/objects/Contact/fields/Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>Profile_Image__c</fullName>
    <label>Profile Image</label>
    <type>Url</type>
</CustomField>