force-app/main/default/objects/Contact/fields/Profile_Photo__c.field-meta.xml
<CustomField>
    <fullName>Profile_Photo__c</fullName>
    <label>Profile Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>