force-app/main/default/objects/Contact/fields/Profile_Update_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Profile_Update_Subscription__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the profile update subscription.</description>
    <label>Profile Update Subscription</label>
    <type>Checkbox</type>
</CustomField>