force-app/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT(Account.Owner.Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>