force-app/main/default/objects/Contact/fields/Requested_Contact__c.field-meta.xml
<CustomField>
    <fullName>Requested_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Contact</label>
    <type>Checkbox</type>
</CustomField>