force-app/main/default/objects/Contact/fields/Self_Registered_Company__c.field-meta.xml
<CustomField>
    <fullName>Self_Registered_Company__c</fullName>
    <label>Self-Registered Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>