force-app/main/default/objects/Contact/fields/Service_Request_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Subscription__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the service request subscription.</description>
    <label>Service Request Subscription</label>
    <type>Checkbox</type>
</CustomField>