force-app/main/default/objects/Contact/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <description>This field is used to store the Software details</description>
    <label>Software</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>