force-app/main/default/objects/Contact/fields/Software_Request_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Software_Request_Subscription__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the software request subscription.</description>
    <label>Software Request Subscription</label>
    <type>Checkbox</type>
</CustomField>