force-app/main/default/objects/Contact/fields/Source_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Campaign_Code__c</fullName>
    <description>Campaign Code captured if registrant originated from Ehub</description>
    <label>Source Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>