force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the Status</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>