force-app/main/default/objects/Contact/fields/std10__c.field-meta.xml
<CustomField>
    <fullName>std10__c</fullName>
    <description>Registrant provisioned text (Custom Field #10)</description>
    <label>std10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>