force-app/main/default/objects/Contact/fields/std2__c.field-meta.xml
<CustomField>
    <fullName>std2__c</fullName>
    <description>Registrant provisioned text (Custom Field #2)</description>
    <label>std2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>