force-app/main/default/objects/Contact/fields/std3__c.field-meta.xml
<CustomField>
    <fullName>std3__c</fullName>
    <description>Registrant provisioned text (Custom Field #3)</description>
    <label>std3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>