force-app/main/default/objects/Contact/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Subscription</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calibration Subscription</fullName>
            </value>
            <value>
                <fullName>Contract Subscription</fullName>
            </value>
            <value>
                <fullName>May we offer you more information on our products &amp; services</fullName>
            </value>
            <value>
                <fullName>Newsletter 1 Subscription</fullName>
            </value>
            <value>
                <fullName>Newsletter 2 Subscription</fullName>
            </value>
            <value>
                <fullName>Newsletter 3 Subscription</fullName>
            </value>
            <value>
                <fullName>Profile Update Subscription</fullName>
            </value>
            <value>
                <fullName>Service Request Subscription</fullName>
            </value>
            <value>
                <fullName>Software Request Subscription</fullName>
            </value>
            <value>
                <fullName>What prompted your interest for this query?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>