force-app/main/default/objects/Contact/fields/Sync_With_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Sync_With_Pardot__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if Contact record is syncing with Pardot. For Contact, sync is required and should be checked by default.</description>
    <label>Sync With Pardot</label>
    <type>Checkbox</type>
</CustomField>