force-app/main/default/objects/Contact/recordTypes/Customer_Contact.recordType-meta.xml
<RecordType>
    <fullName>Customer_Contact</fullName>
    <active>true</active>
    <label>Customer Contact</label>
</RecordType>