force-app/main/default/objects/Contact/validationRules/YODA_Contact_Mailing_Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Contact_Mailing_Country_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( CONTAINS($Profile.Name, &quot;YODA&quot;),NOT($Setup.Bypass_Settings__c.Bypass_Validation_Rules__c), ISBLANK(MailingCountry))</errorConditionFormula>
    <errorMessage>Mailing Country is required for this Contact.</errorMessage>
</ValidationRule>