force-app/main/default/objects/Contact/listViews/Contacts_by_Industry.listView-meta.xml
<ListView>
    <fullName>Contacts_by_Industry</fullName>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <columns>ACCOUNT.OWNER.LAST_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Industry__c</columns>
    <filterScope>Everything</filterScope>
    <label>Contacts by Industry</label>
</ListView>