force-app/main/default/objects/Contact/listViews/Contacts_by_Region.listView-meta.xml
<ListView>
    <fullName>Contacts_by_Region</fullName>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <columns>ACCOUNT.OWNER.LAST_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Customer_Contact</value>
    </filters>
    <label>Contacts by Region</label>
</ListView>