force-app/main/default/objects/Contact/listViews/My_Account_s_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Account_s_Contacts</fullName>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.OWNER.LAST_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Account&apos;s Contacts</label>
</ListView>